added some functions on js

--- a/css/style.css
+++ b/css/style.css
@@ -38,5 +38,9 @@ main {
 }
 
 .bg-blue {
-    background-color: blue;
+    background-color: lightblue;
+}
+
+.bg-red {
+    background-color: red;
 }
